# android_virtual_cam

./: AGENTS.md  CHANGELOG.md  README.md  README_en.md  README_tc.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-debug-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  vcam_jni.cpp
app/src/main/java/com/example/vcam/: HookMain.java  MainActivity.kt  SettingsRepository.kt  VcamSettings.kt  VideoToFrames.java  YuvNative.java
app/src/main/java/com/example/vcam/location/model/: FakeLocation.kt
app/src/main/java/com/example/vcam/location/xposed/: HookEntry.kt
app/src/main/java/com/example/vcam/location/xposed/cellar/: PhoneInterfaceManagerHooker.kt  TelephonyRegistryHooker.kt
app/src/main/java/com/example/vcam/location/xposed/helpers/: ConfigGateway.kt  LocationLogger.kt
app/src/main/java/com/example/vcam/location/xposed/location/: LocationHookerAfterS.kt  LocationHookerPreQ.kt  (+2 more)
app/src/main/java/com/example/vcam/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rSG/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
